--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prisma/seed.js", "app/ui/ThemeToggle/themeToggle.jsx", "app/providers/ThemeProvider.jsx", "app/context/ThemeContext.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prisma/seed.js", "app/ui/ThemeToggle/themeToggle.jsx", "app/providers/ThemeProvider.tsx", "app/context/ThemeContext.jsx"],
   "exclude": ["node_modules"]
 }
